[tool.poetry]
name = "bewise_junior_test"
version = "0.1.0"
description = ""
authors = ["DBWtv <dima.bwc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
SQLAlchemy = "^2.0.21"
asyncpg = "^0.28.0"
asyncio = "^3.4.3"
requests = "^2.31.0"
uvicorn = "^0.23.2"
psycopg2 = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
